[project]
name = "agentz"
version = "0.1.0"
description = "Local threat intel summarizer agent with LLM support"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "typer",
    "rich",
    "tqdm",
    "python-dotenv",
    "llama-cpp-python; platform_system != 'Windows'",
    "transformers",
    "sentence-transformers"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"