[project]
name = "agentz"
version = "0.1.0"
description = "LLM-powered threat intel CLI"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer[all]"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
agentz = "agentz.cli:app"
