[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentz"
version = "0.1.0"
description = "A local threat intel agent powered by LLMs"
authors = [
    { name="Dan Glass", email="dan@example.com" }
]
dependencies = [
    "typer[all]",
    "rich",
    "requests"
]

[tool.setuptools.packages.find]
include = ["agentz*"]
